# gameinprogress

./: .gitignore  CMakeLists.txt
Naglfar/: CMakeLists.txt
Naglfar/src/components/: Entity.h  GraphicsEntity.h  InputEntity.h  PhysicsEntity.h  Scene.h
Naglfar/src/graphics/: Renderer.cpp  Renderer.h
Naglfar/src/window/: Window.cpp  Window.h
cmake/: FindSDL2IMAGE.cmake
src/: main.cpp
src/Engine/Entity/: DrawMeGraphics.cpp  DrawMeGraphics.h  DrawMeInput.cpp  DrawMeInput.h  DrawMePhysics.cpp  DrawMePhysics.h  Entity.h  GraphicsEntity.h  InputEntity.h  PhysicsEntity.h  Window.cpp  Window.h
src/Engine/Events/: Event.h  WindowEvent.cpp  WindowEvent.h
src/Engine/Input/: InputHandler.cpp  InputHandler.h  WindowEventHandler.cpp  WindowEventHandler.h
src/Engine/Messeaging/: Listener.h  Subject.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
src/Game/: Player.cpp  Player.h
src/Game/Actors/: GameObject.h  Movable.h
src/Game/Controls/: Command.h  MoveCommand.cpp  MoveCommand.h
src/Network/: Client.cpp  Client.h  Network.cpp  Network.h
src/objects/: Card.cpp  Card.h
